# SkelAnimGL

./: .gitmodules  CMakeLists.txt  README.md
Application/: CMakeLists.txt  app.cpp  app.h
Application/core/: FreeCamera.cpp  FreeCamera.hpp
SkelAnimGL/: CMakeLists.txt
SkelAnimGL/shaders/: skeleton_anim.cs  skinned.fs  skinned.vs
SkelAnimGL/src/core/: Camera.hpp  GameObject.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp  Transform.hpp
SkelAnimGL/src/graphics/: Buffer.cpp  Buffer.hpp  IRenderer.cpp  IRenderer.hpp  RendererContext.cpp  RendererContext.hpp  Shader.cpp  Shader.cpp.in  Shader.hpp  Texture.cpp  Texture.hpp
SkelAnimGL/src/model/components/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.h  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  Model.hpp  Skeleton.h
SkelAnimGL/src/model/loaders/: ModelImporter.cpp  ModelImporter.hpp
SkelAnimGL/src/openGL/: glBuffer.cpp  glBuffer.hpp  glRenderer.cpp  glRenderer.hpp  glShader.cpp  glShader.hpp  glTexture.cpp  glTexture.hpp
SkelAnimGL/src/utils/: ILogger.hpp  Logger.cpp  Logger.hpp  StringHash.hpp
SkelAnimGL/src/utils/_internal/: ConsoleLogger.cpp  ConsoleLogger.hpp
demo_assets/helicopter/: license.txt  scene.gltf
